--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "scripts": {
     "start": "node ./server/runServer.js",
     "develop": "nodemon ./server/runServer.js",
-    "format": "prettier server/** ui/** bin/** --write"
+    "format": "prettier server/** ui/** bin/** --write",
+    "lint": "eslint server/**/*.js ui/**/*.js bin/**/*.js",
+    "test": "ava test/**/*.test.js"
   },
   "bin": {
     "mockayo": "./bin/mockayo.js"
@@ -21,6 +23,14 @@
     "lodash.get": "^4.4.2"
   },
   "devDependencies": {
+    "ava": "^1.2.1",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "isomorphic-fetch": "^2.2.1",
     "nodemon": "^1.18.9",
     "prettier": "^1.16.4"
   }
